testing/Sentinel/Tests/ShouldSucceed/Issue335.adl
CONTEXT Issue335 IN ENGLISH

r :: A * B [UNI,TOT]  REPRESENT B TYPE BIGALPHANUMERIC
s :: A * C [UNI]      REPRESENT C TYPE BIGALPHANUMERIC

RULE "Initialize s": (I[A]-(s;s~));r |- s

ENDCONTEXT