testing/Sentinel/Tests/ShouldFail/Issue335.adl
CONTEXT Issue335 IN ENGLISH

REPRESENT B TYPE BIGALPHANUMERIC
REPRESENT C TYPE BIGALPHANUMERIC

RULE "Initialize s": I[B] |- I[C]

ENDCONTEXT